--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <article>
                 <div>
                     <h3>瀏覽器</h3>
-                    <p>好的開發者工具會帶你上天堂這句話不是沒有道理的，由於chrome市占率是最高的也支援不少API，如果你的主要開發瀏覽器不是chrome那我建議你現在就開始改用。</p>
+                    <p>好的開發者工具會帶你上天堂這句話不是沒有道理的，由於chrome市占率是最高的也支援不少API，在開發上主要依chrome的效果為主，如果你的主要開發瀏覽器不是chrome那我建議你現在就開始改用。</p>
                     <p>在前端有各式各樣的環境存在，有必須支援IE的原因，也有考慮到使用者是使用safari或firefox等部份功能不支援的瀏覽器，在執行瀏覽上會產生了相容性問題，因此就算是你裝了chrome，在測試上仍然需要將其他瀏覽器一併納入。</p>
                 </div>
                 <div>
@@ -122,17 +122,64 @@
             </article>
         </section>
 
-
     </main>
 
 
     <footer>
         <p>&copy; ayvc0420</p> 
         <div>
-            本站最佳瀏覽解析度為1920x1080
+            本站最佳瀏覽解析度為1920x1080，不支援IE瀏覽器
+        </div>
+        <div class="left">
+            <a href="javascript:;" id="goTop" class="footer_img">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+                    <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+                </svg>
+            </a>
+        </div>
+        <div class="right">
+            <a href="https://ayvc0420.github.io/" title="前往ayvc0420 github" class="footer_img">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40 " fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                </svg>
+            </a>
         </div>
     </footer>
 
+    <script>
+        const goTop = document.getElementById('goTop')
+        const footerLeft = document.querySelector('footer>.left')
+        goTop.addEventListener('click',goUp)
+
+        let loopUp; 
+        function goUp(){
+            let loopUp = setInterval(()=>{
+                if(document.documentElement.scrollTop <= 25){
+                    clearInterval(loopUp)
+                }
+                const n = document.documentElement.scrollTop - 50
+                document.documentElement.scrollTop = n
+            },3)
+        }
+
+        window.addEventListener('scroll',function(){
+            const nowHeight = document.documentElement.scrollTop
+            nowHeight >= 1500 ? footerLeft.style.left = '50px' : footerLeft.style.left = '-200%'
+        })
+
+        // const goTop = document.getElementById('goTop')
+        // goTop.addEventListener('click',function(){
+        //     window.requestAnimationFrame(goUp)
+        // })
+
+        // function goUp(){
+        //     const n = document.documentElement.scrollTop - 50
+        //     document.documentElement.scrollTop = n
+        //     if(document.documentElement.scrollTop >= 25){
+        //         window.requestAnimationFrame(goUp)
+        //     }
+        // }
+    </script>
 
 
     <script src="./js/vue_2.6.14.js"></script>
