--- a/jsExplain.html
+++ b/jsExplain.html
@@ -83,13 +83,13 @@
             <header class="header">
                 <h2>前言</h2>
                 <p>JavaScript是一個在WEB上執行的程式語言，與HTML/CSS不同的是，它是一個真正的程式語言，因此你如果開始學習JS的話那麼恭喜你，你現在已經成為一位真正的網頁製作人員。</p>
-                <p>網站設立的初衷是與使用者互動為目標，JS在網頁中扮演協助使用者與網站雙方互動的角色，沒有JS的網站稱為靜態網站。</p>
-                <p>在開始撰寫JavaScript前，建議先安裝vs code套件<a href="https://marketplace.visualstudio.com/items?itemName=xabikos.JavaScriptSnippets" target="new">JavaScript (ES6) </a>在使用時會提示語法幫助撰寫速度，但仍然強烈建議須將完整名字了解記住。</p>
+                <p>網站設立的初衷是將資訊呈現給使用者查看，現今網站透過各種JS效果增強與使用者體驗互動，如果沒有JS的網站我們稱為靜態網站。</p>
+                <p>在開始撰寫JavaScript前，建議先安裝vs code套件<a href="https://marketplace.visualstudio.com/items?itemName=xabikos.JavaScriptSnippets" target="new">JavaScript (ES6) </a>在使用時會提示語法幫助撰寫速度，但仍然強烈建議須將完整名字了解並記住。</p>
             </header>
 
             <div class="code">
                 <h3>JavaScript使用說明</h3>
-                <p>JS的使用方式分為script標籤內以及script src導入的方式將JS檔導入置網頁，早期網站會將src位置放在head標籤內但隨著網頁技術進步，需要的JS檔案越來越多導致載入的時間被拉長因此src位置放在/body標籤前可以優先載入文字與畫面再載入功能，以下將分成多個單元對JS進行簡單介紹。</p>
+                <p>JS的使用方式分為script標籤內以及script src導入的方式將JS檔導入置網頁，早期網站會將src位置放在head標籤內但隨著網頁技術進步，需要的JS檔案容量與日俱增進而影響載入時間因此src位置放在/body標籤前可以優先載入文字與畫面再載入功能，以下將分成多個單元對JS進行簡單介紹。</p>
                     <h3>console</h3>
                 <ol>
                     <li>
@@ -117,9 +117,9 @@
                     <li>
     <pre>
     &lt;script>
-        let a = 1  //我是全域變數
+        let a = 1  //我在全域位置宣告
         {  //區域開始
-            let a = 2  //我是區域變數
+            let a = 2  //我在區域內宣告
             console.log('內',a)
         }  //區域結束
         console.log('外',a)
@@ -187,8 +187,8 @@
                     <li>let type5 = 'string'</li>
                     <p>字串string，用單引號或雙引號包覆的字元皆為字串</p>
                 </ol>
-                <p>以上是最常見的五種型態，另外兩種Symbol、Bigint可以參考<a href="https://developer.mozilla.org/zh-TW/docs/Web/JavaScript/Data_structures" target="new">MDN 資料型態</a>，部分參數在使用上須特別注意如數字型態的0在執行布林轉換時雖然本身是一個存在的字元但仍會被轉換成false。</p>
-                <p>JS中使用=是將右邊的值賦予至左邊稱為傳值，但對象為物件與陣列時JS會採用傳址的方式將值賦予，由於是傳址的方式改動其中一方都會影響雙方，針對傳址傳值的部分可以參考影片<a href="https://www.youtube.com/watch?v=sxe-oahUARI&t=3205s" target="new">Alex 傳值傳址解說</a>，針對純字串的物件資料進行深拷貝可以參考JSON.parse()與JSON.stringify()的功能。</p>
+                <p>以上是最常見的五種型態，針對<span class="mark">無法確認型態為何的情況下可以使用typeof()查看型態</span>，另外兩種Symbol、Bigint可以參考<a href="https://developer.mozilla.org/zh-TW/docs/Web/JavaScript/Data_structures" target="new">MDN 資料型態</a>，部分參數在使用上須特別注意如數字型態的0在執行布林轉換時雖然本身是一個存在的字元但仍會被轉換成false。</p>
+                <p>JS中使用=是將右邊的值賦予至左邊稱為傳值，但對象為物件與陣列時JS會採用傳址的方式將值賦予，由於是傳址的方式改動其中一方都會影響雙方，針對傳址傳值的部分可以參考影片<a href="https://www.youtube.com/watch?v=sxe-oahUARI&t=3205s" target="new">Alex 傳值傳址詳細解說</a>，針對純字串的物件資料進行深拷貝可以參考JSON.parse()與JSON.stringify()的功能。</p>
                 <h3>function函式</h3>
                 <p>在JS中函式是一個非常泛用的程式碼執行片段區塊，在JS幾乎每個動作執行都會透過函式進行處理，以下是常見的函式宣告方式。</p>
                 <ol>
@@ -226,10 +226,10 @@
                 </ol>
 
                 <h3>常見的功能介紹</h3>
-                <p>以下將在JS中經常會用到的函式功能做簡單介紹，某些功能在不同瀏覽器中可能無法使用，建議使用前先參考:<a href="https://caniuse.com/" target="new">can i use</a>查看支援版本。</p>
+                <p>以下將在JS中經常會用到的函式功能做簡單介紹，某些功能在不同瀏覽器中可能無法使用，建議使用前先參考<a href="https://caniuse.com/" target="new">can i use</a>查看支援版本。</p>
                 <ol>
                     <li>target.addEventListener</li>
-                    <p>對象為DOM元素，執行監聽，參數有click(點擊)、mousemove(移動)、resize(調整瀏覽器大小)等等，更詳細參數參考:<a href="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener" target="new">MDN 監聽器說明</a></p>
+                    <p>對象為DOM元素，執行監聽，參數有click(點擊)、mousemove(移動)、resize(調整瀏覽器大小)等等，更詳細參數參考<a href="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener" target="new">MDN 監聽器說明</a></p>
                     <li>target.forEach</li>
                     <p>與for迴圈相似但無法透過break跳出迴圈，forEach的停止條件為對象的length長度，在對陣列資料進行處理時非常好用，forEach有三個參數分別為當下內容、編號、對象本身</p>
                     <li>target.map</li>
@@ -277,7 +277,7 @@
                     <li>event.stopPropagation()</li>
                     <p>阻止事件冒泡</p>
                 </ol>
-                <p>JS還有非常多功能/參數這邊未提及如動態參數this、同步與非同步ajax、建構函式class，這些使用方式無法用三言兩語帶過，建議透過各類影片如:<a href="https://www.youtube.com/watch?v=1pYtVwIAvhY" target="new">影片1</a>、<a href="https://www.youtube.com/watch?v=_vFuDQ_6Xt8" target="new">影片2</a>以及參考<a href="https://developer.mozilla.org/zh-TW/docs/Web/JavaScript" target="new">MDN文件</a>。</p>
+                <p>以上只針對功能做說明，詳細使用方式參考<a href="https://developer.mozilla.org/zh-TW/docs/Web/JavaScript/Reference/Global_Objects" target="new">MDN 內建物件說明</a>，除了以上功能外還有非常多功能/參數這邊未提及如動態參數this、同步與非同步ajax、建構函式class，這些使用方式無法用三言兩語帶過，建議透過各類影片如<a href="https://www.youtube.com/watch?v=1pYtVwIAvhY" target="new">影片1</a>、<a href="https://www.youtube.com/watch?v=_vFuDQ_6Xt8" target="new">影片2</a>以及參考MDN文件。</p>
                 <p>如果你是第一次接觸網頁技術那麼你的學習路線圖應該為:HTML>CSS>JS>AJAX技術>node管理>前端框架，JS學習的終點雖然是永無止盡的，但是JS的熱門程度卻是直線上升。</p>
             </div>
             
