--- a/gitExplain.html
+++ b/gitExplain.html
@@ -136,6 +136,14 @@
                     <p>將已追蹤的項目加上msg後提交存為記錄點</p>
                     <li>git commit --amend -m "newMsg"</li>
                     <p>將最後一個commit點的訊息變更為newMsg訊息</p>
+                    <li>git push</li>
+                    <p>將已儲存的commit點推送到遠端倉庫保存</p>
+                    <li>git clone</li>
+                    <p>將遠端倉庫下拉至本地，與pull不同的是clone是整包倉庫下載通常只在第一次更新數據庫使用</p>
+                    <li>git pull</li>
+                    <p>將遠端倉庫的內容同步至本地，與clone不同的是pull是更新有異動的檔案</p>
+                    <li>git remote</li>
+                    <p>新增遠端倉庫，push前必須先使用該指令新增數據庫到設定內</p>
                     <li>git reflog</li>
                     <p>顯示最近git的指令，包含SHA-1碼、分支操作，用於拯救reset錯誤動作</p>
                     <li>git tag v0.1</li>
