--- a/cssExplain.html
+++ b/cssExplain.html
@@ -19,6 +19,15 @@
             color: white;
         } */
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CND1PTT94K"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-CND1PTT94K');
+    </script>
 </head>
 <body>
     
@@ -525,7 +534,7 @@
         })()
     </script>
     
-    <script src="./js/vue_2.6.14.js"></script>
+    <script src="./js/vue_2.6.14.min.js"></script>
     <script type="module">
         import './js/navVue.js'
         import './js/bannerVue.js'
