--- a/dockerExplain.html
+++ b/dockerExplain.html
@@ -113,7 +113,7 @@
     </footer>
 
 
-    <script src="./js/vue_2.6.14.js"></script>
+    <script src="./js/vue_2.6.14.min.js"></script>
     <script type="module">
         import './js/navVue.js'
         import './js/bannerVue.js'
