--- a/htmlExplain.html
+++ b/htmlExplain.html
@@ -27,6 +27,15 @@
             transform: translateY(30%);
         }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CND1PTT94K"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-CND1PTT94K');
+    </script>
 </head>
 <body>
     
@@ -331,7 +340,7 @@
         </div>
     </footer>
 
-    <script src="./js/vue_2.6.14.js"></script>
+    <script src="./js/vue_2.6.14.min.js"></script>
     <script type="module">
         import './js/navVue.js'
         import './js/bannerVue.js'
