--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="前端技術分享介紹"/>
+    <meta name=”description” content="前端技術分享介紹"/>
+    <meta name="Keywords" content="前端,網頁,HTML入門"/>
+    <meta property="og:type" content="article" />
     <meta property="og:url" content="https://ayvc0420.github.io/webDesign/index.html"/>
     <meta name="twitter:url" content="https://ayvc0420.github.io/webDesign/index.html"/>
     <title>前端技術分享介紹</title>
     <link rel="stylesheet" href="scss/reset.css">
     <link rel="stylesheet" href="scss/style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CND1PTT94K"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-CND1PTT94K');
+    </script>
     <style>
         .content>article>div{
             transition: all .6s;
@@ -162,7 +174,7 @@
     </footer>
 
 
-    <script src="./js/vue_2.6.14.js"></script>
+    <script src="./js/vue_2.6.14.min.js"></script>
     <script type="module">
         import './js/navVue.js'
         import './js/bannerVue.js'
