--- a/jqueryExplain.html
+++ b/jqueryExplain.html
@@ -16,7 +16,15 @@
             color: red;
         }
     </style>
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CND1PTT94K"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-CND1PTT94K');
+    </script>
 </head>
 <body>
     
@@ -258,7 +266,7 @@
 
 
 
-    <script src="./js/vue_2.6.14.js"></script>
+    <script src="./js/vue_2.6.14.min.js"></script>
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script type="module">
         import './js/navVue.js'
