改函式寫法

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
 
         <section class="fb_comments">
-            <h5>如有錯誤或需補充還請不吝分享</h5>
+            <h5>本站內容如有錯誤或需補充還請不吝分享</h5>
             <div class="fb-comments" data-href="https://ayvc0420.github.io/webDesign/index.html" data-width="400" data-numposts="5"></div>
         </section>
 
