--- a/vueExplain.html
+++ b/vueExplain.html
@@ -184,7 +184,7 @@
                     },
                 },
                 methods:{
-                    btn(term){
+                    btn:function(term){
                         this.show = term
                     },
                     showUserData2(){
@@ -280,7 +280,7 @@
                 },
             },
             methods:{
-                btn(term){
+                btn:function(term){
                     this.show = term
                 },
                 showUserData2(){
