--- a/htmlExplain.html
+++ b/htmlExplain.html
@@ -91,8 +91,12 @@
             <header class="header">
                 <h2>前言</h2>
                 <p>HTML是構成網頁的基礎架構，無論是透過JS創造的標籤或使用template語法最後都會被瀏覽器編譯成HTML執行渲染，HTML是一種標籤語法，除了部分特殊的標籤如:input、hr等以外其他語法在撰寫上都必須要有對應的標籤&lt;/>作為封閉。</p>
-                <p>HTML的結構不僅是控制css的要點之一，也是讓搜尋引擎更容易針對網頁進行資料蒐集的重點，如何正確使用語意化標籤在SEO上會有一定的影響，開始前建議先安裝vs code套件<a href="https://marketplace.visualstudio.com/items?itemName=abusaidm.html-snippets" target="new">HTML Snippets</a>可以減少撰寫標籤時間，以下用tag代替「標籤」一詞。</p>
+                <p>HTML的結構不僅是控制css的要點之一，也是讓搜尋引擎更容易針對網頁進行資料蒐集的重點，如何正確使用語意化標籤在SEO上會有一定的影響，開始前建議先安裝vs code套件<a href="https://marketplace.visualstudio.com/items?itemName=abusaidm.html-snippets" target="new">HTML Snippets</a>可以減少撰寫HTML標籤時間。</p>
             </header>
+            <div class="code">
+                <h3>執行網頁</h3>
+                <p>使用vs code開啟資料夾後建立一個.html的檔案(首頁預設index.html)，使用emmet輔助工具提供的快捷語法只要輸入「!」一個驚嘆號就可以建立初始化網頁內容，使用瀏覽器執行檔案就會自動將檔案轉換成網頁語法呈現在畫面上，以下用tag代替「標籤」一詞介紹html的使用方式。</p>
+            </div>
             <article>
                 <div>
                     <h4>a tag</h4>
