--- a/jsExplain.html
+++ b/jsExplain.html
@@ -283,7 +283,7 @@
         <article class="end_text">
             <h2>小結</h2>
             <p>JavaScript是賦予網頁靈魂的程式語言，在現今追求互動的網頁下是不可或缺的一門技術，JavaScript不只能應用在網頁上，也能在應用在手機APP開發。</p>
-            <p>針對更多JavaScript影片可以參考<a href="https://www.youtube.com/channel/UCEL8871qFEakpqYpwBSjHNA" target="new">Alex 宅幹嘛頻道</a>，有數百部前端影片可以學習。</p>
+            <p>針對更多JavaScript影片可以參考<a href="https://www.youtube.com/channel/UCEL8871qFEakpqYpwBSjHNA" target="new">Alex 宅幹嘛頻道</a>，有數百部前端影片可以學習<br>AJAX技術須了解的HTTP header觀念可以參考<a href="https://www.youtube.com/watch?v=qTpw9EKEeqk" target="new">偷米騎巴哥]HTTP header講解</a>。</p>
             <h3>JS很簡單阿</h3>
             <video src="./video/alexJs.mp4" controls class="radius"></video>
             <p>影片出處:<a href="https://www.youtube.com/watch?v=Opw1XH2eGb4&t=1445s" target="new">這裡</a></p>
