--- a/ajaxExplain.html
+++ b/ajaxExplain.html
@@ -5,13 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta name="title" content=""/>
-    <meta property="og:url" content=""/>
-    <meta name="twitter:url" content=""/> -->
-    <!-- title -->
+    <meta name="title" content="AJAX介紹"/>
+    <meta property="og:url" content="https://ayvc0420.github.io/webDesign/ajaxExplain.html"/>
+    <meta name="twitter:url" content="https://ayvc0420.github.io/webDesign/ajaxExplain.html"/>
     <title>AJAX介紹</title>
     <link rel="stylesheet" href="scss/reset.css">
     <link rel="stylesheet" href="scss/style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CND1PTT94K"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-CND1PTT94K');
+    </script>
 </head>
 <body>
     
@@ -222,13 +230,8 @@
                     <li>/apiurl/data/id</li>
                 </ol>
                 <p>遵循RESTful風格所設計的API有統一的位置，且必須是無狀態(伺服端不儲存客戶端資料，在請求時會一併發送應有的資訊)，更多可以參考<a href="http://restful.p2hp.com/learn/caching" target="new">REST API</a>、<a href="https://zh.wikipedia.org/wiki/%E8%A1%A8%E7%8E%B0%E5%B1%82%E7%8A%B6%E6%80%81%E8%BD%AC%E6%8D%A2" target="new">REST維基百科</a></p>
-<!-- 
-                <p>以上是四種常見的AJAX方式，使用AJAX時需要了解</p> -->
-                <!-- <ul>
-                    <p>支援度(由低到高)</p>
-                    <li class="flex row flex_center fz20">fetch<i class="arrow_right mid mg_right_left10"></i>axios<i class="arrow_right mid mg_right_left10"></i>$.ajax<i class="arrow_right mid mg_right_left10"></i>XHR</li>
-                    <p></p> 
-                </ul> -->
+
+
             </div>
         </section>
 
