對IE瀏覽器進行新的顯示畫面

--- a/cssExplain.html
+++ b/cssExplain.html
@@ -541,6 +541,6 @@
         import './js/layout.js'
         import './js/contentAni.js'
     </script>
-
+    <script src="./js/isIE.js"></script>
 </body>
 </html>
