--- a/gitExplain.html
+++ b/gitExplain.html
@@ -222,6 +222,7 @@
         import './js/jquery-3.6.0.min.js'
         import './js/jquery.fancybox.min.js'
     </script>
-
+    <script src="./js/isIE.js"></script>
+    
 </body>
 </html>
