--- a/index.html
+++ b/index.html
@@ -181,15 +181,8 @@
         import './js/layout.js'
         import './js/contentAni.js'
     </script>
-    <!-- <script>
-        window.addEventListener('resize',function(){
-            const nowWidth = window.innerWidth;
-            const fb = document.querySelector('.fb-comments')
-            const fbWidth = document.querySelector('.fb-comments').dataset.width
-            console.log(nowWidth)
-            nowWidth <= 600 ? fb.setAttribute('data\-width',nowWidth-50) : fb.setAttribute('data\-width',600)
-        })
-    </script> -->
+    <script src="./js/isIE.js"></script>
+
 </body>
 
 </html>
