--- a/jsExplain.html
+++ b/jsExplain.html
@@ -320,6 +320,6 @@
         import './js/bannerVue.js'
         import './js/layout.js'
     </script>
-
+    <script src="./js/isIE.js"></script>
 </body>
 </html>
