--- a/layout.html
+++ b/layout.html
@@ -106,5 +106,6 @@
         import './js/bannerVue.js'
         import './js/layout.js'
     </script>
+    <script src="./js/isIE.js"></script>
 </body>
 </html>
