--- a/ajaxExplain.html
+++ b/ajaxExplain.html
@@ -265,11 +265,13 @@
 
 
 
-    <script src="./js/vue_2.6.14.js"></script>
+    <script src="./js/vue_2.6.14.min.js"></script>
     <script type="module">
         import './js/navVue.js'
         import './js/bannerVue.js'
         import './js/layout.js'
     </script>
+    
+    <script src="./js/isIE.js"></script>
 </body>
 </html>
