--- a/cicdExplain.html
+++ b/cicdExplain.html
@@ -152,7 +152,7 @@
         import './js/bannerVue.js'
         import './js/layout.js'
     </script>
-
+    <script src="./js/isIE.js"></script>
 
 </body>
 </html>
