--- a/dockerExplain.html
+++ b/dockerExplain.html
@@ -129,7 +129,7 @@
         import './js/layout.js'
         import './js/contentAni.js'
     </script>
-
+    <script src="./js/isIE.js"></script>
 
 </body>
 </html>
