--- a/htmlExplain.html
+++ b/htmlExplain.html
@@ -351,7 +351,7 @@
         import './js/layout.js'
         import './js/contentAni.js'
     </script>
-
+    <script src="./js/isIE.js"></script>
 
 
 </body>
