--- a/seoExplain.html
+++ b/seoExplain.html
@@ -100,6 +100,6 @@
         import './js/bannerVue.js'
         import './js/layout.js'
     </script>
-
+    <script src="./js/isIE.js"></script>
 </body>
 </html>
